# purple_archive

./: .clang-format  .doxygen_cfg  .gitignore  CMakeLists.txt  README.md  a.asm  compile_run.sh  core  generate_docs.sh  index  info.h
doc/html/: CMakeCCompilerId_8c.html  README_8md.html  annotated.html  arguments_8c.html  arguments_8h.html  arguments_8h_source.html  classes.html  data_8h.html  data_8h_source.html  declaration_8c.html  declaration_8h.html  declaration_8h_source.html  definitions_8h.html  definitions_8h_source.html  dir_0af82c57c971a339f4ceccdbb56a3168.html  dir_176a5db2fd37f846c3c1bd62d4380a8f.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6daa8521c4411a4c03b547eaa86126fa.html  dir_8d778d3f1ae2c3c51010a69a287dc14c.html  dir_d44c64559bbebec7f509842c48db8b23.html  feature__tests_8c.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_j.html  (+55 more)
doc/latex/: CMakeCCompilerId_8c.tex  annotated.tex  files.tex  (+52 more)
examples/: condition_test.prp  loop_test.prp  print_test.prp  scanner_test.prp  variable_test.prp
include/: arguments.h  data.h  declaration.h  definitions.h  info.h  info.h.in  parse.h  scan.h  symbol_table.h  tree.h
src/: arguments.c  declaration.c  parse.c  parse_expression.c  parse_statement.c  purple.c  scan.c  symbol_table.c  tree.c
(+88 files in other folders)
